--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,7 +25,7 @@ steps:
       - '--platform'
       - 'managed'
       - '--region'
-      - 'us-central1'  # Update with the region you prefer
+      - 'europe-west1'  # Update with the region you prefer
       - '--allow-unauthenticated'
 
 images:
